# Byzantine-Agreement

./: EPR_Byzantine_Parallelized.py  README.md  noisy_simulation_results.db  simulation_results.db  visualizations.py
3-player-protocol-shaan/: EPR_Byzantine.py  EPR_Byzantine_Old.py
EPR_Byzantine_N_Players-shaan.py/: verification_algorithms.py
EPR_Byzantine_N_Players.py/: players.py
Scripts/EPR_Byzantine_N_Players.py/: EPR_n_player.py  config.py
n-player-protocol/: README.md  pyproject.toml
n-player-protocol-DES/: eprqdba.ipynb  pyproject.toml
n-player-protocol-DES/n_player_protocol_DES.egg-info/: SOURCES.txt  top_level.txt
n-player-protocol-DES/protocol/: README.md  commander.py  config.py  distributor.py  lieutenants.py  players.py  simulation.py  simulation_sweep.py
n-player-protocol-DES/results/: database.py
n-player-protocol-optical/: Optical_Byzantine_Agreement_Scratchwork.py  pyproject.toml
n-player-protocol-optical/n_player_protocol_DES.egg-info/: PKG-INFO  SOURCES.txt
n-player-protocol-optical/protocol/: commander.py  config.py  distributor.py  lieutenants.py  loyal_commander_simulation_results.csv  players.py  plot.py  run_loyal_commander_simulation.py  run_loyal_commander_simulation.sh  run_traitor_commander_simulation.py  run_traitor_commander_simulation.sh  simulation.py  traitor_commander_simulation_results.csv
n-player-protocol-optical/protocol/test/: entanglement_distribution_test.py
n-player-protocol-superconducting/: README.md
n-player-protocol/eprq_dba/: players.py  quantum_source.py  simulation.py
(+47 files in other folders)
